🐒⛵️ Checkpoint ./index.html:33983566/277 ./style.css:33983566/143

--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
 </div>
   
 <div class="itemdirectory-right">  
-<a href="/login" target="_blank"> <p class="ficusbtn-nvidia">Add to my platform</p></a>
+<a href="/login" target="_blank"> <p class="ficusbtn-nvidia">Sync</p></a>
   
 </div>
   
@@ -477,6 +477,13 @@
               </p>
             </div>
             <div class="rightsearch-container">
+                            <div class="search-container">
+                <input
+                  class="nsi-engine"
+                  placeholder="Filter modules"
+                  id="searchInput"
+                />
+              </div>
             </div>
             
             
