🚤🍇 Checkpoint ./style.css:33983566/2797 ./.glitch-assets:33983566/1771 ./index.html:33983566/492

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                   id="dog-names"
                   onchange="window.location.href=this.value;"
                 >
-                  <option value="">Languages and regions</option>
+                  <option value="">Pick your language</option>
                   <option value="/fr">Français FR</option>
                   <option value="/uk">English UK</option>
                   <option value="/us">English US</option>
@@ -816,7 +816,7 @@
             <h1 class="logo" href="https://saasduo.com/" />
             <img
               class="navlogo"
-              src="https://cdn.glitch.global/9d75250c-7972-4ed1-930d-d52d6a129103/saasduo%20web.svg?v=1681834269599"
+              src="https://cdn.glitch.global/9d75250c-7972-4ed1-930d-d52d6a129103/SaaSduo.com%20Each%20Interaction%20Matters.svg?v=1686304388167"
               alt=""
             />
           </div>
