🍅😎 Checkpoint ./index.html:33983566/467 ./style.css:33983566/433

--- a/index.html
+++ b/index.html
@@ -469,9 +469,13 @@
 <div class="itemdirectory">
   
   
+  
+  
 <div class="itemdirectory-left">
-<p class="mod-usage">Name Feature</p>
-<p class="mod-price">£0.01 /usage</p>     
+<p class="saasduoentitled">
+  <span style="color: blue;">Full Name</span>
+  <span style="color: green;">£0.01 /usage</span>
+</p>   
 </div>
   
 <div class="itemdirectory-right">  
