🏕😘 Checkpoint ./style.css:33983566/1565 ./index.html:33983566/30656 ./us/index.html:33983566/80

--- a/us/index.html
+++ b/us/index.html
@@ -663,11 +663,12 @@
           </div>
 
           <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+          
           <script>
             $(document).ready(function () {
               $("#searchInput").on("keyup", function () {
                 var value = $(this).val().toLowerCase();
-                $(".moduleitem").filter(function () {
+                $(".itemdirectory").filter(function () {
                   $(this).toggle(
                     $(this).text().toLowerCase().indexOf(value) > -1
                   );
