🚆🚪 Checkpoint ./style.css:33983566/2015 ./index.html:33983566/37

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                   id="dog-names"
                   onchange="window.location.href=this.value;"
                 >
-                  <option value="">Pick your language</option>
+                  <option value="">Your language</option>
                   <option value="/fr">Français FR</option>
                   <option value="/uk">English UK</option>
                   <option value="/us">English US</option>
