🐙🚖 Checkpoint ./index.html:33983566/52 ./style.css:33983566/405

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
               </div>
 
                       <p class="quantum3-4">
-                        Enter a token ID to define your SaaS — then drop your
+                        Enter token ID to name your SaaS — then drop your
                         requirements and let's get started
                       </p>
 
