--- a/index.html
+++ b/index.html
@@ -183,10 +183,9 @@
                       </p>
 
                       <div class="resterencouple">
-                        <input class="cube0" value="saasduo.com/" readonly />
                         <input
                           class="cube1"
-                          placeholder="your-saas-id"
+                          placeholder="your-saas-name"
                           pattern="[A-Za-z0-9]+"
                           onkeydown="if(['Space'].includes(arguments[0].code)){return false;}"
                           
