👨🏕 Checkpoint ./index.html:33983566/3613 ./style.css:33983566/1336

--- a/index.html
+++ b/index.html
@@ -469,8 +469,8 @@
 <div class="itemdirectory moduleitem">
 <div class="itemdirectory-left">
 <p class="saasduoentitled">
-<span style="color: blue;">Full Name</span>
-<span style="color: green;">£0.01 /usage</span>
+<span style="color: rgb(163 255 170);">Full Name</span>
+<span style="color: #ff8ec6;">£0.01 /usage</span>
 </p>   
 </div> 
 <div class="itemdirectory-right">  
@@ -481,8 +481,8 @@
 <div class="itemdirectory moduleitem">
 <div class="itemdirectory-left">
 <p class="saasduoentitled">
-<span style="color: blue;">Full Name</span>
-<span style="color: green;">£0.01 /usage</span>
+<span style="color: rgb(163 255 170);">Full Name</span>
+<span style="color: #ff8ec6;">£0.01 /usage</span>
 </p>   
 </div> 
 <div class="itemdirectory-right">  
@@ -494,8 +494,117 @@
 <div class="itemdirectory moduleitem">
 <div class="itemdirectory-left">
 <p class="saasduoentitled">
-<span style="color: blue;">Full Name</span>
-<span style="color: green;">£0.01 /usage</span>
+<span style="color: rgb(163 255 170);">Full Name</span>
+<span style="color: #ff8ec6;">£0.01 /usage</span>
+</p>   
+</div> 
+<div class="itemdirectory-right">  
+<a href="/login" target="_blank"> <p class="ficusbtn-nvidia">Sync</p></a> 
+</div>
+</div>
+  
+  
+  <div class="itemdirectory moduleitem">
+<div class="itemdirectory-left">
+<p class="saasduoentitled">
+<span style="color: rgb(163 255 170);">Full Name</span>
+<span style="color: #ff8ec6;">£0.01 /usage</span>
+</p>   
+</div> 
+<div class="itemdirectory-right">  
+<a href="/login" target="_blank"> <p class="ficusbtn-nvidia">Sync</p></a> 
+</div>
+</div>
+  
+  <div class="itemdirectory moduleitem">
+<div class="itemdirectory-left">
+<p class="saasduoentitled">
+<span style="color: rgb(163 255 170);">Full Name</span>
+<span style="color: #ff8ec6;">£0.01 /usage</span>
+</p>   
+</div> 
+<div class="itemdirectory-right">  
+<a href="/login" target="_blank"> <p class="ficusbtn-nvidia">Sync</p></a> 
+</div>
+</div>
+  
+  <div class="itemdirectory moduleitem">
+<div class="itemdirectory-left">
+<p class="saasduoentitled">
+<span style="color: rgb(163 255 170);">Full Name</span>
+<span style="color: #ff8ec6;">£0.01 /usage</span>
+</p>   
+</div> 
+<div class="itemdirectory-right">  
+<a href="/login" target="_blank"> <p class="ficusbtn-nvidia">Sync</p></a> 
+</div>
+</div>
+  
+  <div class="itemdirectory moduleitem">
+<div class="itemdirectory-left">
+<p class="saasduoentitled">
+<span style="color: rgb(163 255 170);">Full Name</span>
+<span style="color: #ff8ec6;">£0.01 /usage</span>
+</p>   
+</div> 
+<div class="itemdirectory-right">  
+<a href="/login" target="_blank"> <p class="ficusbtn-nvidia">Sync</p></a> 
+</div>
+</div>
+  
+  <div class="itemdirectory moduleitem">
+<div class="itemdirectory-left">
+<p class="saasduoentitled">
+<span style="color: rgb(163 255 170);">Full Name</span>
+<span style="color: #ff8ec6;">£0.01 /usage</span>
+</p>   
+</div> 
+<div class="itemdirectory-right">  
+<a href="/login" target="_blank"> <p class="ficusbtn-nvidia">Sync</p></a> 
+</div>
+</div>
+  
+  <div class="itemdirectory moduleitem">
+<div class="itemdirectory-left">
+<p class="saasduoentitled">
+<span style="color: rgb(163 255 170);">Full Name</span>
+<span style="color: #ff8ec6;">£0.01 /usage</span>
+</p>   
+</div> 
+<div class="itemdirectory-right">  
+<a href="/login" target="_blank"> <p class="ficusbtn-nvidia">Sync</p></a> 
+</div>
+</div>
+  
+  <div class="itemdirectory moduleitem">
+<div class="itemdirectory-left">
+<p class="saasduoentitled">
+<span style="color: rgb(163 255 170);">Full Name</span>
+<span style="color: #ff8ec6;">£0.01 /usage</span>
+</p>   
+</div> 
+<div class="itemdirectory-right">  
+<a href="/login" target="_blank"> <p class="ficusbtn-nvidia">Sync</p></a> 
+</div>
+</div>
+  
+  <div class="itemdirectory moduleitem">
+<div class="itemdirectory-left">
+<p class="saasduoentitled">
+<span style="color: rgb(163 255 170);">Full Name</span>
+<span style="color: #ff8ec6;">£0.01 /usage</span>
+</p>   
+</div> 
+<div class="itemdirectory-right">  
+<a href="/login" target="_blank"> <p class="ficusbtn-nvidia">Sync</p></a> 
+</div>
+</div>
+  
+  <div class="itemdirectory moduleitem">
+<div class="itemdirectory-left">
+<p class="saasduoentitled">
+<span style="color: rgb(163 255 170);">Full Name</span>
+<span style="color: #ff8ec6;">£0.01 /usage</span>
 </p>   
 </div> 
 <div class="itemdirectory-right">  
