🎑🎾 Checkpoint ./style.css:33983566/2377 ./index.html:33983566/64

--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
               <div class="search-container">
                 <input
                   class="nsi-engine"
-                  placeholder="Filter modules"
+                  placeholder="Use keywords to filter"
                   id="searchInput"
                 />
               </div>
