🦁🏇 Checkpoint ./style.css:33983566/1341 ./index.html:33983566/451

--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
 <div class="itemdirectory moduleitem">
 <div class="itemdirectory-left">
 <p class="saasduoentitled">
-<span style="color: rgb(163 255 170);">Full Name</span>
+<span style="color: rgb(163 255 170);">Forms and reports</span>
 <span style="color: #ff8ec6;">£0.01 /usage</span>
 </p>   
 </div> 
@@ -487,7 +487,7 @@
 <div class="itemdirectory moduleitem">
 <div class="itemdirectory-left">
 <p class="saasduoentitled">
-<span style="color: rgb(163 255 170);">Full Name</span>
+<span style="color: rgb(163 255 170);">Execute functions</span>
 <span style="color: #ff8ec6;">£0.01 /usage</span>
 </p>   
 </div> 
@@ -500,8 +500,8 @@
 <div class="itemdirectory moduleitem">
 <div class="itemdirectory-left">
 <p class="saasduoentitled">
-<span style="color: rgb(163 255 170);">Full Name</span>
-<span style="color: #ff8ec6;">£0.01 /usage</span>
+<span style="color: rgb(163 255 170);">Client frontend</span>
+<span style="color: #ff8ec6;">£0.02 /usage</span>
 </p>   
 </div> 
 <div class="itemdirectory-right">  
@@ -513,7 +513,55 @@
   <div class="itemdirectory moduleitem">
 <div class="itemdirectory-left">
 <p class="saasduoentitled">
-<span style="color: rgb(163 255 170);">Full Name</span>
+<span style="color: rgb(163 255 170);">Your domain name</span>
+<span style="color: #ff8ec6;">£0.00 /usage</span>
+</p>   
+</div> 
+<div class="itemdirectory-right">  
+<a href="/login" target="_blank"> <p class="ficusbtn-nvidia">Sync</p></a> 
+</div>
+</div>
+  
+  <div class="itemdirectory moduleitem">
+<div class="itemdirectory-left">
+<p class="saasduoentitled">
+<span style="color: rgb(163 255 170);">Payment gateway</span>
+<span style="color: #ff8ec6;">£0.19 /usage</span>
+</p>   
+</div> 
+<div class="itemdirectory-right">  
+<a href="/login" target="_blank"> <p class="ficusbtn-nvidia">Sync</p></a> 
+</div>
+</div>
+  
+  <div class="itemdirectory moduleitem">
+<div class="itemdirectory-left">
+<p class="saasduoentitled">
+<span style="color: rgb(163 255 170);">Statistics</span>
+<span style="color: #ff8ec6;">£0.00 /usage</span>
+</p>   
+</div> 
+<div class="itemdirectory-right">  
+<a href="/login" target="_blank"> <p class="ficusbtn-nvidia">Sync</p></a> 
+</div>
+</div>
+  
+  <div class="itemdirectory moduleitem">
+<div class="itemdirectory-left">
+<p class="saasduoentitled">
+<span style="color: rgb(163 255 170);">Mobile apps</span>
+<span style="color: #ff8ec6;">£0.29 /usage</span>
+</p>   
+</div> 
+<div class="itemdirectory-right">  
+<a href="/login" target="_blank"> <p class="ficusbtn-nvidia">Sync</p></a> 
+</div>
+</div>
+  
+  <div class="itemdirectory moduleitem">
+<div class="itemdirectory-left">
+<p class="saasduoentitled">
+<span style="color: rgb(163 255 170);">Transactional emails</span>
 <span style="color: #ff8ec6;">£0.01 /usage</span>
 </p>   
 </div> 
@@ -525,8 +573,8 @@
   <div class="itemdirectory moduleitem">
 <div class="itemdirectory-left">
 <p class="saasduoentitled">
-<span style="color: rgb(163 255 170);">Full Name</span>
-<span style="color: #ff8ec6;">£0.01 /usage</span>
+<span style="color: rgb(163 255 170);">Transactional SMS</span>
+<span style="color: #ff8ec6;">£0.07 /usage</span>
 </p>   
 </div> 
 <div class="itemdirectory-right">  
@@ -537,8 +585,8 @@
   <div class="itemdirectory moduleitem">
 <div class="itemdirectory-left">
 <p class="saasduoentitled">
-<span style="color: rgb(163 255 170);">Full Name</span>
-<span style="color: #ff8ec6;">£0.01 /usage</span>
+<span style="color: rgb(163 255 170);">IA logics</span>
+<span style="color: #ff8ec6;">£0.04 /usage</span>
 </p>   
 </div> 
 <div class="itemdirectory-right">  
@@ -549,8 +597,8 @@
   <div class="itemdirectory moduleitem">
 <div class="itemdirectory-left">
 <p class="saasduoentitled">
-<span style="color: rgb(163 255 170);">Full Name</span>
-<span style="color: #ff8ec6;">£0.01 /usage</span>
+<span style="color: rgb(163 255 170);">Presentation website</span>
+<span style="color: #ff8ec6;">£0.04 /usage</span>
 </p>   
 </div> 
 <div class="itemdirectory-right">  
@@ -561,56 +609,8 @@
   <div class="itemdirectory moduleitem">
 <div class="itemdirectory-left">
 <p class="saasduoentitled">
-<span style="color: rgb(163 255 170);">Full Name</span>
-<span style="color: #ff8ec6;">£0.01 /usage</span>
-</p>   
-</div> 
-<div class="itemdirectory-right">  
-<a href="/login" target="_blank"> <p class="ficusbtn-nvidia">Sync</p></a> 
-</div>
-</div>
-  
-  <div class="itemdirectory moduleitem">
-<div class="itemdirectory-left">
-<p class="saasduoentitled">
-<span style="color: rgb(163 255 170);">Full Name</span>
-<span style="color: #ff8ec6;">£0.01 /usage</span>
-</p>   
-</div> 
-<div class="itemdirectory-right">  
-<a href="/login" target="_blank"> <p class="ficusbtn-nvidia">Sync</p></a> 
-</div>
-</div>
-  
-  <div class="itemdirectory moduleitem">
-<div class="itemdirectory-left">
-<p class="saasduoentitled">
-<span style="color: rgb(163 255 170);">Full Name</span>
-<span style="color: #ff8ec6;">£0.01 /usage</span>
-</p>   
-</div> 
-<div class="itemdirectory-right">  
-<a href="/login" target="_blank"> <p class="ficusbtn-nvidia">Sync</p></a> 
-</div>
-</div>
-  
-  <div class="itemdirectory moduleitem">
-<div class="itemdirectory-left">
-<p class="saasduoentitled">
-<span style="color: rgb(163 255 170);">Full Name</span>
-<span style="color: #ff8ec6;">£0.01 /usage</span>
-</p>   
-</div> 
-<div class="itemdirectory-right">  
-<a href="/login" target="_blank"> <p class="ficusbtn-nvidia">Sync</p></a> 
-</div>
-</div>
-  
-  <div class="itemdirectory moduleitem">
-<div class="itemdirectory-left">
-<p class="saasduoentitled">
-<span style="color: rgb(163 255 170);">Full Name</span>
-<span style="color: #ff8ec6;">£0.01 /usage</span>
+<span style="color: rgb(163 255 170);">Dell local server</span>
+<span style="color: #ff8ec6;">£0.0001 /ping</span>
 </p>   
 </div> 
 <div class="itemdirectory-right">  
