🐬📍 Checkpoint ./index.html:33983566/423

--- a/index.html
+++ b/index.html
@@ -651,11 +651,9 @@
 
           <div class="saasgeniecustomers">
             
-                          <p class="dudes1">They proudly use our softwares</p>
+                          <p class="dudes1">They proudly use our SaaS</p>
             <p class="dudes2">
-                Unless specifically requested for downloable softwares and apps
-                — the solutions created are accessible on all popular browsers,
-                without downloading, from all devices
+                They trust us — we reliably provide the right experiences and practices
               </p>
 
         
