☕️👼 Checkpoint ./index.html:33983566/168 ./style.css:33983566/329945 ./login/index.html:33983566/95

--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
             
                           <p class="dudes1">They proudly use our SaaS</p>
             <p class="dudes2">
-                They trust us — we reliably provide the right experiences and practices
+                They trust us because we provide reliable service every day — easy and relevant experiences
               </p>
 
         
