🍫🚜 Checkpoint ./style.css:33983566/535 ./register/index.html:33983566/50 ./support/index.html:33983566/55 ./privacy/index.html:33983566/55 ./terms/index.html:33983566/53 ./2fa/index.html:33983566/69 ./blocked/index.html:33983566/55

--- a/support/index.html
+++ b/support/index.html
@@ -88,7 +88,7 @@
     </head>
       <div class="ambiant-starship-funk">
 
-    <body>
+<body class="support-page">
       <!--
       LOGIN PAGE SAASDUO
     -->
