--- a/register/index.html
+++ b/register/index.html
@@ -88,7 +88,7 @@
     </head>
       <div class="ambiant-starship-funk">
 
-    <body>
+<body class="register-page">
       <!--
       LOGIN PAGE SAASDUO
     -->
