--- a/terms/index.html
+++ b/terms/index.html
@@ -88,7 +88,7 @@
     </head>
       <div class="ambiant-starship-funk">
 
-    <body>
+<body class="terms-page">
       <!--
       LOGIN PAGE SAASDUO
     -->
