🐊🤖 Checkpoint ./index.html:33983566/91 ./style.css:33983566/137

--- a/index.html
+++ b/index.html
@@ -178,8 +178,7 @@
               </div>
 
                       <p class="quantum3-4">
-                        Enter token ID to name your SaaS — then drop your
-                        requirements and let's get started
+                        Enter a token ID to name your SaaS — then drop your requirements and let's get started
                       </p>
 
                       <div class="resterencouple">
@@ -651,9 +650,9 @@
 
           <div class="saasgeniecustomers">
             
-                          <p class="dudes1">They proudly use our SaaS</p>
+                          <p class="dudes1">Proud users of our SaaS</p>
             <p class="dudes2">
-                They trust us because we provide reliable service every day — easy and relevant experiences
+                They trust us because we provide reliable service every day — with an easy and relevant SaaS experiences
               </p>
 
         
