🚒❄️ Checkpoint ./index.html:33983566/78 ./style.css:33983566/516

--- a/index.html
+++ b/index.html
@@ -97,11 +97,13 @@
         <div class="nav-parent">
           <div class="nav-left">
             <h1 class="logo" href="https://saasduo.com/" />
-            <img
+            <a href="/">
+              <img
               class="navlogo"
               src="https://cdn.glitch.global/9d75250c-7972-4ed1-930d-d52d6a129103/SaaSduo.com%20about%40saasduo.com.svg?v=1686304308990"
               alt=""
-            />
+              
+            /></a>
           </div>
           <div class="nav-right">
             <a href="/">
