🚁👨‍👨‍👦 Checkpoint ./style.css:33983566/16 ./index.html:33983566/297

--- a/index.html
+++ b/index.html
@@ -457,9 +457,9 @@
                       <p class="blue1">Simple as plug and play</p>
 
                         <p class="blue2">
-                          <span style="color: #8dc3ff;">With our standard modules to stack like bricks,</span>
-                          <span style="color: rgb(163 255 170);"> your SaaS is created fastly, you can also start from scratch.</span>
-                          <span style="color: #a19dff;">Billed monthly per usage after an upfront fee.</span>
+                          <span style="color: #adbac7;">With our standard modules to stack like bricks, your SaaS is created fastly, </span>
+                          <span style="color: #9b97ff;">or you can also start from scratch.</span>
+                          <span style="color: #adbac7;">Billed monthly as you go after an upfront fee.</span>
                  
               </p>
   
@@ -652,7 +652,7 @@
 
           <div class="saasgeniecustomers">
             
-                          <p class="dudes1">Proud users of our SaaS</p>
+                          <p class="dudes1">Proud and very happy customers</p>
             <p class="dudes2">
                 They trust us because we provide reliable service every day — with an easy and relevant SaaS experiences
               </p>
