🏮🗾 Checkpoint ./index.html:33983566/5 ./style.css:33983566/4075

--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
 
           <div class="saasgeniecustomers">
             
-                          <p class="dudes1">Proud and very happy customers</p>
+                          <p class="dudes1">Proud and happy customers</p>
             <p class="dudes2">
                 They trust us because we provide reliable service every day — with an easy and relevant SaaS experiences
               </p>
