⛄️🛤 Checkpoint ./style.css:33983566/1159 ./index.html:33983566/74

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 The loved place where software are created
               </p>
 
-              <p class="geniemania">
+              <p class="geniemania legoduplo">
                 Stop using inappropriate software or expensive developers — Your
                 affordable and on-demand SaaS is here, pay as you go after an
                 upfront fee
@@ -589,7 +589,7 @@
   <div class="itemdirectory moduleitem">
 <div class="itemdirectory-left">
 <p class="saasduoentitled">
-<span style="color: rgb(163 255 170);">IA logics</span>
+<span style="color: rgb(163 255 170);">AI logics</span>
 <span class="hidemobileviewport" style="color: #ff8ec6;">£0.04 /usage</span>
 </p>   
 </div> 
@@ -655,8 +655,8 @@
 
           <div class="saasgeniecustomers">
             
-                          <p class="dudes1">Proud and happy customers</p>
-            <p class="dudes2">
+                          <p class="dudes1">Always proud customers</p>
+            <p class="dudes2 pestacle">
                 They trust us because we provide reliable service every day — with an easy and relevant SaaS experiences
               </p>
 
