🐲🎗 Checkpoint ./style.css:33983566/1174 ./index.html:33983566/209

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
             /></a>
           </div>
           <div class="nav-right">
+                      <div class="maradona">
             <a href="/">
               <bouton href="/" class="btn1">Product features</bouton>
             </a>
@@ -118,6 +119,7 @@
             <a href="/login">
               <bouton href="/login" class="btn3">Open my console</bouton></a
             >
+           </div>
           </div>
         </div>
       </nav>   
